tests/ui/modules/issue-1920-3.stderr
error[E0277]: the trait bound `S: Clone` is not satisfied
  --> $DIR/issue-1920-3.rs:14:20
   |
LL |     assert_clone::<foo::issue_1920::S>();
   |                    ^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `S`
   |
note: required by a bound in `assert_clone`
  --> $DIR/issue-1920-3.rs:11:32
   |
LL | fn assert_clone<T>() where T : Clone { }
   |                                ^^^^^ required by this bound in `assert_clone`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
